--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,4 @@ import(tune)
 import(workflows)
 importFrom(dplyr,group_by)
 importFrom(reshape2,dcast)
-importFrom(stringr,)
+importFrom(stringr,str_match_all)
